--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -30,7 +30,8 @@ jobs:
         ls -la
 
     - name: Install Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
+        token: ${{ secrets.CODECOV_TOKEN}}
         files: ./coverage.xml
         fail_ci_if_error: true
